# hse-mml-project

./: .gitignore  README.md  app.py  config.toml  pyproject.toml  server.py  test_rag.ipynb  test_rag.py  test_ragv4_1.py  Отчет по рубежному контролю.md
notebooks/: data_exploration_and_processing.ipynb
src/: config.py  rag_engine.py
src/rag/: __init__.py  ingestion.py  main.py  query_processing.py  ranking.py  schema.py  search.py  storage.py
src/utils/: __init__.py  logging_config.py
testing/: rag_comparison_image.csv  rag_comparison_report.txt  rag_comparison_results.csv  rag_comparison_summary.csv  rag_comparison_text.csv  test_config.toml  test_rag.ipynb  test_rag_python.py
