[project]
name = "hse-mml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "einops>=0.8.1",
    "fastapi>=0.121.1",
    "ipywidgets>=8.1.8",
    "json-repair>=0.54.1",
    "jupyter>=1.1.1",
    "langchain>=1.0.4",
    "langchain-text-splitters>=1.0.0",
    "ollama>=0.6.1",
    "pandoc>=2.4",
    "pypandoc>=1.15",
    "rank-bm25>=0.2.2",
    "sentencepiece>=0.2.1",
    "toml>=0.10.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "unstructured>=0.18.18",
]
